--- a/html/index.html
+++ b/html/index.html
@@ -641,7 +641,7 @@
         </h3>
         <div class='ost-content'>
             <div class='content-left'>
-                <img src='../assets/web/ost/ost.jpg'>
+                <img alt='' src='../assets/web/ost/ost.jpg'>
             </div>
             <div class='content-right'>
                 <div class='content-right-header'>
