--- a/html/game.html
+++ b/html/game.html
@@ -17,14 +17,16 @@
     <div class='navbar-container'>
         <div class='navbar-container-left'>
             <img alt='' src='../assets/web/title.png'>
-            <a href='index.html'>
-                HOME
-                <div class='underline'></div>
-            </a>
-            <a>
+            <button>
+                <a href='index.html'>
+                    HOME
+                    <div class='underline'></div>
+                </a>
+            </button>
+            <button>
                 HOW TO PLAY
                 <div class='underline'></div>
-            </a>
+            </button>
         </div>
         <div class='navbar-container-right'>
             <button>
@@ -35,6 +37,9 @@
         </div>
     </div>
 </section>
+<!--<section class='game section'>-->
+<!--    test-->
+<!--</section>-->
 <div class='container'>
     <div id='loading-modal'>
         <h3>
@@ -101,9 +106,9 @@
                 </div>
                 <div
                     class='button hoverable'
-                    id='settings-button'
+                    id='exit-button'
                 >
-                    Settings
+                    Exit to Menu
                 </div>
             </div>
         </div>
@@ -144,13 +149,6 @@
                 </div>
                 <div class='settings-content hoverable'>
                     <div class='settings-middle'>
-                        <span class='settings-content-title'>Fullscreen</span>
-                        <div
-                            class='clickable arrow-left'
-                            id='fullscreen-toggle-left'
-                        >
-                            <
-                        </div>
                         <span id='fullscreen-text'> Off </span>
                         <div
                             class='clickable arrow-right'
