--- a/html/index.html
+++ b/html/index.html
@@ -26,8 +26,10 @@
         <div class='navbar-container-left'>
             <img alt='' src='../assets/web/title.png'>
             <button>
-                HOME
-                <div class='underline'></div>
+                <a href='index.html'>
+                    HOME
+                    <div class='underline'></div>
+                </a>
             </button>
             <button>
                 HOW TO PLAY
