--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='UTF-8' />
     <meta
-        content='initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no'
+        content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no'
         name='viewport'
     />
     <title>Document</title>
@@ -639,11 +639,11 @@
 <section class='ost-container section'>
     <div class='inner-container-ost'>
         <h3>
-            OST BLABLABAL
+            ORIGINAL SOUNDTRACK
         </h3>
         <div class='ost-content'>
             <div class='content-left'>
-                <img alt='' src='../assets/web/ost/ost.jpg'>
+                <img alt='' src='../assets/web/ost/ost.png'>
             </div>
             <div class='content-right'>
                 <div class='content-right-header'>
@@ -663,7 +663,7 @@
                     </button>
                     <div class='audio-content'>
                         <h3>
-                            Titan
+                            Cult of the Zealous
                         </h3>
                         <p>
                             By Disasterpiece
@@ -679,6 +679,11 @@
                 </div>
             </div>
         </div>
+        <!--        <div class='ost-player'>-->
+        <!--            <div class='content-right-slider'>-->
+        <!--                <input class='slider' max='100' min='0' step='0.0001' type='range' value='0'>-->
+        <!--            </div>-->
+        <!--        </div>-->
     </div>
 </section>
 <section class='footer section'>
