--- a/html/game.html
+++ b/html/game.html
@@ -202,6 +202,7 @@
         ></canvas>
     </div>
 </div>
+<script>var exports = {};</script>
 <script
     crossorigin='anonymous'
     integrity='sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM='
