--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     />
     <title>Document</title>
     <link
-        href='../scss/game/index.css'
+        href='../scss/index.css'
         rel='stylesheet'
     />
 </head>
