--- a/html/game.html
+++ b/html/game.html
@@ -6,7 +6,8 @@
         content='initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no'
         name='viewport'
     />
-    <title>Document</title>
+    <title>Hyper WLight Drifter</title>
+    <link href='../assets/web/logo.png' rel='icon' type='image/png'>
     <link
         href='../scss/game/game.css'
         rel='stylesheet'
