--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,8 @@
         content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no'
         name='viewport'
     />
-    <title>Document</title>
+    <title>Hyper WLight Drifter</title>
+    <link href='../assets/web/logo.png' rel='icon' type='image/png'>
     <link
         href='../scss/index.css'
         rel='stylesheet'
