--- a/html/game.html
+++ b/html/game.html
@@ -224,7 +224,7 @@
                 class='button hoverable'
                 id='cancel-button'
             >
-                Cancel
+                Back
             </div>
         </div>
         <div
@@ -303,7 +303,7 @@
             </main>
             <div class='exit-button' id='exit-button-settings'>
                 <div class='hoverable'>
-                    Exit
+                    Back
                 </div>
             </div>
         </div>
