--- a/html/index.html
+++ b/html/index.html
@@ -452,7 +452,9 @@
         <div class='content active'>
             <div class='image-carousel'>
                 <div class='image-box'>
-                    <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                    <div class='image-container'>
+                        <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                    </div>
                     <div class='arrow arrow-left pointer'>
                         <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
                             <path
@@ -514,212 +516,6 @@
                     It is filled with various green regenerative Hard Light Crystals. The crystals seem infectious, as
                     the inhabitors of the forest can become encased in them.Various Crystal Beasts seem to be the
                     outcome of being infected by these crystals.
-                </p>
-            </div>
-        </div>
-        <div class='content'>
-            <div class='image-carousel'>
-                <div class='image-box'>
-                    <img alt='' src='../assets/web/carousel/carousel_2.png'>
-                    <div class='arrow arrow-left pointer'>
-                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
-                            <path
-                                d='M15.293 3.293 6.586 12l8.707 8.707 1.414-1.414L9.414 12l7.293-7.293-1.414-1.414z'
-                                fill='white' />
-                        </svg>
-                    </div>
-                    <div class='arrow arrow-right pointer'>
-                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
-                            <path
-                                d='M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z'
-                                fill='white' />
-                        </svg>
-                    </div>
-                </div>
-                <div class='image-list'>
-                    <div class='image-list-box first-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_1.png'>
-                    </div>
-                    <div class='image-list-box bordered second-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_2.png'>
-                    </div>
-                    <div class='image-list-box third-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_3.png'>
-                    </div>
-                    <div class='image-list-box fourth-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_4.png'>
-                    </div>
-                </div>
-            </div>
-            <div class='image-description'>
-                <h3>
-                    The Divine Path
-                </h3>
-                <h5>
-                    Difficulty
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='transparent' r='10' stroke='white' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='transparent' r='10' stroke='white' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='transparent' r='10' stroke='white' />
-                    </svg>
-
-                </h5>
-                <p>
-                    The Mountains, also called Divine Path, the North and the Crystal Cliffs, are the northern area of
-                    the land of light.
-
-                </p>
-                <p>
-                    The Mountains are a collection of snowy mountaintops, abandoned structures, and underground cave
-                    systems. The area is inhabited by the Bird People, a tribe of Vultures.
-                    The Vultures, Vulture Acolytes, and Vulture Shamans are enemies exclusive to this area.
-                </p>
-            </div>
-        </div>
-        <div class='content'>
-            <div class='image-carousel'>
-                <div class='image-box'>
-                    <img alt='' src='../assets/web/carousel/carousel_3.png'>
-                    <div class='arrow arrow-left pointer'>
-                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
-                            <path
-                                d='M15.293 3.293 6.586 12l8.707 8.707 1.414-1.414L9.414 12l7.293-7.293-1.414-1.414z'
-                                fill='white' />
-                        </svg>
-                    </div>
-                    <div class='arrow arrow-right pointer'>
-                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
-                            <path
-                                d='M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z'
-                                fill='white' />
-                        </svg>
-                    </div>
-                </div>
-                <div class='image-list'>
-                    <div class='image-list-box first-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_1.png'>
-                    </div>
-                    <div class='image-list-box second-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_2.png'>
-                    </div>
-                    <div class='image-list-box bordered third-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_3.png'>
-                    </div>
-                    <div class='image-list-box fourth-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_4.png'>
-                    </div>
-                </div>
-            </div>
-            <div class='image-description'>
-                <h3>
-                    The Eastern Watershelf
-                </h3>
-                <h5>
-                    Difficulty
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='transparent' r='10' stroke='white' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='transparent' r='10' stroke='white' />
-                    </svg>
-
-                </h5>
-                <p>
-                    The Eastern Watershelf or lake is a biome on the East area of the land of light.
-
-                </p>
-                <p>
-                    The Lake requires hopping between various decayed platforms, and the player is primarily dependent
-                    on moving platforms with large safe areas in between. Along with the moving platforms, the player
-                    goes underground to skip between areas.
-                </p>
-            </div>
-        </div>
-        <div class='content'>
-            <div class='image-carousel'>
-                <div class='image-box'>
-                    <img alt='' src='../assets/web/carousel/carousel_4.png'>
-                    <div class='arrow arrow-left pointer'>
-                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
-                            <path
-                                d='M15.293 3.293 6.586 12l8.707 8.707 1.414-1.414L9.414 12l7.293-7.293-1.414-1.414z'
-                                fill='white' />
-                        </svg>
-                    </div>
-                    <div class='arrow arrow-right pointer'>
-                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
-                            <path
-                                d='M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z'
-                                fill='white' />
-                        </svg>
-                    </div>
-                </div>
-                <div class='image-list'>
-                    <div class='image-list-box first-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_1.png'>
-                    </div>
-                    <div class='image-list-box second-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_2.png'>
-                    </div>
-                    <div class='image-list-box third-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_3.png'>
-                    </div>
-                    <div class='image-list-box bordered fourth-carousel pointer'>
-                        <img alt='' src='../assets/web/carousel/carousel_4.png'>
-                    </div>
-                </div>
-            </div>
-            <div class='image-description'>
-                <h3>
-                    The Barren Hills
-                </h3>
-                <h5>
-                    Difficulty
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
-                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
-                    </svg>
-
-                </h5>
-                <p>
-                    The Barren Hills or simply Wastes is the South region of the land of light.
-                </p>
-                <p>
-                    The Barren Hills is home to a large underground laboratory
-                    complex that also serves as a robot factory and is responsible for the creation of various creatures
-                    seen around the world such as the Dirks and blue-skins. Scattered about the desert are a number of
-                    ruined mechanical structures resembling pieces of a large spacecraft possibly also created in the
-                    labs.
                 </p>
             </div>
         </div>
